# clustersim

./: .gitignore  CMakeLists.txt  README  README-Debian  README.md  Thesis Michele Renda.lyx  build-debug.sh  build-release.sh  build.gyp  collect_stats.sh  compile.sh  config-gui.sh  pack_stats.sh  references.bib
config/: example_2d_constant.cfg  example_2d_cosgrow.cfg  example_2d_exp.cfg  example_2d_gauss.cfg  example_2d_instant.cfg  example_2d_posgauss.cfg  example_2d_timegauss.cfg  example_2d_wave.cfg  example_3d_constant.cfg  example_3d_gauss.cfg  example_3d_instant.cfg  example_4d_min.cfg
config/avrami/: avrami_2d_instant_huge.cfg  avrami_2d_instant_medium.cfg  avrami_2d_instant_small.cfg  avrami_2d_instant_space_huge.cfg  avrami_2d_instant_space_medium.cfg  avrami_2d_instant_space_small.cfg  avrami_2d_mode0.cfg  avrami_2d_mode1.cfg  avrami_2d_sporadic.cfg  avrami_2d_sporadic_huge.cfg  avrami_2d_sporadic_medium.cfg  avrami_2d_sporadic_small.cfg  avrami_2d_sporadic_space_huge.cfg  avrami_2d_sporadic_space_medium.cfg  avrami_2d_sporadic_space_small.cfg  avrami_3d_sporadic.cfg  avrami_4d_sporadic.cfg  avrami_4d_sporadic_grow_fast.cfg  avrami_4d_sporadic_grow_slow.cfg  avrami_5d_sporadic.cfg  avrami_sporadic_2d.cfg  avrami_sporadic_3d.cfg  avrami_sporadic_4d.cfg  avrami_sporadic_5d.cfg
config/constant_side/: avrami_2d_instant.cfg  avrami_3d_instant.cfg  avrami_3d_sporadic.cfg  avrami_4d_instant.cfg  avrami_4d_sporadic.cfg  avrami_5d_instant.cfg  avrami_5d_sporadic.cfg  avrami_6d_instant.cfg  avrami_6d_sporadic.cfg
config/constant_volume/: avrami_2d_instant_parabolic.cfg  avrami_3d_instant.cfg  avrami_5d_sporadic_parabolic.cfg
config/examples/: example_2d_constant.cfg  example_2d_cosgrow.cfg  example_2d_exp.cfg  example_2d_gauss.cfg  example_2d_instant.cfg  example_2d_posgauss.cfg  example_2d_timegauss.cfg  example_2d_wave.cfg  example_3d_constant.cfg  example_3d_gauss.cfg  example_3d_instant.cfg  example_4d_min.cfg
config/setup_1/2d/: crosstube_gauss_instant_2d.cfg  crosstube_gauss_sporadic_2d.cfg  monotube_gauss_instant_2d.cfg  monotube_gauss_sporadic_2d.cfg  (+2 more)
config/thesis/: avrami_2d_instant.cfg  avrami_2d_sporadic.cfg  avrami_3d_instant.cfg  avrami_3d_sporadic.cfg  avrami_4d_instant.cfg  avrami_4d_sporadic.cfg  avrami_4d_sporadic_parabolic.cfg  avrami_5d_instant.cfg  avrami_5d_sporadic.cfg  avrami_5d_sporadic_parabolic.cfg  avrami_6d_instant.cfg  avrami_6d_sporadic.cfg
doc/: Problema Avrami.doc  ideas.txt
plot/: graph-grow-linear-fit.ct2  graph-grow-linear.ct2  graph-grow-log-fit.ct2  graph-grow-log.ct2  hist-volume.ct2
plots/p1/: graph1.ct2
plots/p2/: build.sh  graph_K.ct2  graph_g.ct2  graph_n.ct2  octave-workspace  parabolic_coeff.csv  parabolic_coeff.m
plots/p3/: graph_eta.ct2
plots/p4/: graph_grow_cost_2d.ct2  graph_grow_cost_3d.ct2  graph_grow_cost_4d.ct2  graph_grow_cost_5d.ct2
plots/p5/: build.sh  graph_nk.ct2  hist_k.ct2  hist_n.ct2  make_avg_csv.py
plots/p6/: avrami_instant_parabolic.csv  avrami_sporadic.csv  avrami_sporadic_parabolic.csv  build.sh  cs_avrami_instant.csv  cs_avrami_sporadic.csv  cs_fit_n_linear.ct2  cv_avrami_instant.csv  cv_fit_n_linear.ct2  cv_fit_n_parabolic.ct2  fit_n_linear.ct2  fit_n_parabolic.ct2
script/: make_avg_csv.py  pack_stats.sh  stats_pack.sh
src/: CMakeLists.txt  avrami.c  avrami.h  color_map.c  color_map.h  common.c  common.h  config.h.in  graph.c  graph.h  le.c  le.h  main.c  render.c  render.h  test.c  test.h
util/: .gitignore  avrami-graph.m
util/clustersim-gui/: .project  README  compile.sh  pom.xml
util/env/: set-env-baaf.sh
util/plot/: graph-grow-linear-fit.ct2  graph-grow-linear.ct2  graph-grow-log-fit.ct2  graph-grow-log.ct2
(+3642 files in other folders)
